<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:background="@drawable/radius"
    android:clickable="true"
    android:focusable="true"
    android:padding="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:layout_gravity="top"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <!-- 看答案 -->
    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/look"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="top|start"
        android:gravity="center"
        android:text="@string/da_an"
        android:textColor="@color/white"
        android:textSize="24sp"
        />

    <!-- 控制显示/隐藏的按钮 -->
    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="top|end"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textSize="25sp"
        />

    <!-- 控制显示/隐藏的按钮 -->
    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/toggle_visibility"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="bottom|start"
        android:gravity="center"
        android:text="@string/yin_cang"
        android:textColor="@color/white"
        android:textSize="25sp"
        />

    <!-- 拖拽+调整大小手柄 -->
    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/drag_handle"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="bottom|end"
        android:gravity="center"
        android:text="@string/fang_da"
        android:textColor="@color/white"
        android:textSize="25sp"
        />
</FrameLayout>
